--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.29.1", features = ["full"] }
-axum = {version = "0.6.19", features = ["json"]}
+axum = { version = "0.7.3", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.104" }
-sqlx = { version = "0.6.3", features = ["runtime-async-std-rustls", "sqlite"] }
+sqlx = { version = "0.7.3", features = ["runtime-async-std-rustls", "sqlite"] }
 tracing-subscriber = "0.3.17"
-axum-sessions = "0.5.0"
+tower-sessions = { version = "0.9.1" }
 bcrypt = "0.15.0"
-tower-http = { version = "0.4.3", features = ["cors"] }
+tower-http = { version = "0.5.0", features = ["cors"] }
 dotenv = "0.15.0"
