--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,3 +14,4 @@ tower-sessions = { version = "0.9.1" }
 bcrypt = "0.15.0"
 tower-http = { version = "0.5.0", features = ["cors"] }
 dotenv = "0.15.0"
+log = "0.4.19"
