Upgrade tracing dependencies and add HTTP tracing layer
Updated the 'tracing-subscriber' dependency to version '0.3.18' and 'tracing' package to version '0.1.37'. Also added the HTTP tracing layer to the router and included formatted, thread naming, and level limited tracing in the main function. The profile model was adjusted and no longer includes an ID field, instead the `user_id` is now the primary key. Furthermore, made several changes to the profile update feature for better pronoun management.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,9 +9,10 @@ axum = { version = "0.7.3", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.104" }
 sqlx = { version = "0.7.3", features = ["runtime-async-std-rustls", "sqlite"] }
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1.37"
 tower-sessions = { version = "0.9.1" }
 bcrypt = "0.15.0"
-tower-http = { version = "0.5.0", features = ["cors"] }
+tower-http = { version = "0.5.0", features = ["cors", "trace"] }
 dotenv = "0.15.0"
 log = "0.4.19"
