--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ideno-next",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@8.12.1",
+  "packageManager": "pnpm@8.14.1",
   "scripts": {
     "prepare": "panda codegen",
     "dev": "next dev",
@@ -11,26 +11,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.12",
-    "@headlessui/react": "^1.7.17",
-    "@prisma/client": "^5.7.1",
-    "@tanstack/react-query": "^5.17.0",
-    "@tanstack/react-query-next-experimental": "^5.17.0",
+    "@headlessui/react": "^1.7.18",
+    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-query-next-experimental": "^5.17.15",
     "axios": "^1.6.5",
-    "date-fns": "^3.1.0",
-    "next": "14.0.4",
-    "prettier": "^3.1.1",
-    "react": "^18",
-    "next-auth": "^5.0.0-beta.4",
-    "react-dom": "^18"
+    "date-fns": "^3.2.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.25.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@pandacss/dev": "^0.27.2",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
-    "typescript": "^5"
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3"
   }
 }
