Add Jest tests, restructure API, and update types
Implemented Jest for testing and added rendering test in 'page.test.tsx'. API restructured with 'auth' as a class, incorporating authentication functions. Added more properties to User Profile type definitions and created Profile Update Payload interface for smoother profile updates. Also, added jest in package.json and .swc in .gitignore. This necessitated updates in 'auth.ts' and related files to accommodate new API structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
+    "baseUrl": "./",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -24,7 +25,7 @@
       "@/public/*": ["./public/*"],
       "@/styling/*": ["./styled-system/*"],
       "@/components/*": ["./src/components/*"],
-      "auth":["./src/auth"],
+      "auth":["./src/auth"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
