--- a/package.json
+++ b/package.json
@@ -8,27 +8,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@tanstack/react-query": "^5.17.15",
-    "@tanstack/react-query-next-experimental": "^5.17.15",
+    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-next-experimental": "^5.17.19",
     "axios": "^1.6.5",
-    "date-fns": "^3.2.0",
-    "next": "^14.0.4",
+    "date-fns": "^3.3.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.27.2",
+    "@pandacss/dev": "^0.27.3",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "^14.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.4",
+    "ts-node": "^10.9.2",
+    "@types/jest": "^29.5.11",
     "typescript": "^5.3.3"
   }
 }
