Add detailed docstrings to services and routes
This commit adds comprehensive method documentation across the entire application. It includes description, arguments, returns, note and remarks, and errors sections, following the Rust documentation convensions. This ensures other developers can understand the code with minimal effort and provides a better basis for further development.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "ideno-server"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
+authors = ["Philipp Hergenhahn <philipp.hergenhahn@setilic.com>"]
+repository = "https://git.flouet.com/philipp.hergenhahn/ideno-next"
 
 [dependencies]
 tokio = { version = "1.29.1", features = ["full"] }
